k8s-aws/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintech
  labels:
    app: fintech
    environment: production
